[gd_scene load_steps=3 format=3 uid="uid://d0pq1su1kljn3"]

[ext_resource type="Theme" uid="uid://drkq4gwhuu362" path="res://ui/shared/graphics/themes/default_label.tres" id="1_3wp04"]
[ext_resource type="Script" uid="uid://cs0mh84uxg4jo" path="res://ui/settings/in_game/navigation.gd" id="1_hoq78"]

[node name="Control" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 350
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 350
theme_override_constants/margin_bottom = 150

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.733333, 0.733333, 0.733333, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="SettingsBase" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("1_hoq78")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/SettingsBase"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource("1_3wp04")
text = "PAUZA"

[node name="Back" type="Button" parent="MarginContainer/MarginContainer/SettingsBase"]
layout_mode = 2
size_flags_vertical = 6
text = "Wznów"

[node name="Save" type="Button" parent="MarginContainer/MarginContainer/SettingsBase"]
layout_mode = 2
size_flags_vertical = 6
text = "Zapisz"

[node name="Settings" type="Button" parent="MarginContainer/MarginContainer/SettingsBase"]
layout_mode = 2
size_flags_vertical = 6
text = "Ustawienia"

[node name="Menu" type="Button" parent="MarginContainer/MarginContainer/SettingsBase"]
layout_mode = 2
size_flags_vertical = 6
text = "Wyjdź do menu"

[connection signal="pressed" from="MarginContainer/MarginContainer/SettingsBase/Back" to="MarginContainer/MarginContainer/SettingsBase" method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/SettingsBase/Save" to="MarginContainer/MarginContainer/SettingsBase" method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/SettingsBase/Settings" to="MarginContainer/MarginContainer/SettingsBase" method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/SettingsBase/Menu" to="MarginContainer/MarginContainer/SettingsBase" method="_on_menu_pressed"]
